--- a/src/components/HourCard/HourCard.css
+++ b/src/components/HourCard/HourCard.css
@@ -1,4 +1,4 @@
-.weather-card{
+.hour-card{
     display: flex;
     flex-direction: column;
     margin-left: 14px;
@@ -6,23 +6,23 @@
     justify-content: space-around;
     background-color: rgb(27,26,29);
     border-radius: 20px;
-    width: 12.5%;
+    width: 12.5rem;
 }
 
 
-.weather-card .weather-card-img img{
+.hour-card .hour-card-img img{
     width: 90px;
     height: 70px;
 }
 
-.weather-card .weather-card-temp,.weather-card-day,.weather-card-img{
+.hour-card .hour-card-temp,.hour-card-day,.hour-card-img{
     padding-top: 7px;
     padding-bottom: 7px;
     text-align: center;
     background: transparent;
 }
 
-.weather-card .weather-card-day{
+.hour-card .hour-card-day{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -30,5 +30,7 @@
     border-bottom: 0.3px solid rgb(86, 84, 84);
 }
 
-
+.hour-card-temp{
+    font-family: 'Quantico', sans-serif;
+}
 
