--- a/src/components/HourlyCardSection/HourlyCardSection.css
+++ b/src/components/HourlyCardSection/HourlyCardSection.css
@@ -1,8 +1,15 @@
 .hourly-cards{
-    width: 100%;
+    width: 70%;
     display: flex;
-    justify-content: center;
-    
+    justify-content: space-between;
+    overflow-x: auto;
+    margin-left: auto;
+    margin-right: auto;
+    /* padding-left: 4rem; */
+}
+
+.hourly-cards::-webkit-scrollbar{
+    display: none;
 }
 
 .heading-for-hour{
