--- a/src/components/OtherCityCard/OtherCityCard.css
+++ b/src/components/OtherCityCard/OtherCityCard.css
@@ -9,36 +9,65 @@
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-    padding: 0rem 0.8rem 1rem 0rem;
+    padding: 0rem 0.4rem 0rem 0rem;
 }
 
 .other-city-card .location-name-condn{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 28%;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+    padding-top: 0.5rem;
+    /* height: 100%; */
+}
+
+.other-city-card .location-name-condn span:nth-child(1){
+    font-size: 1.5rem;
+    padding-top: 0.5rem;
+    /* padding-left: 0.9rem; */
+    padding-bottom: 12px;
+    width: 100%;
+}
+
+.other-city-card .location-name-condn span:nth-child(2){
+    font-size: 1rem;
+    height: 40px;
+    text-align: center;
+    width: 100%;
 }
 
 .other-city-card .location-del-icon{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 28%;
+    width: 10%;
 }
 
 .other-city-card .location-weather-img{
-    width: 28%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-bottom: 0.2rem;
+    align-items: center;
+}
+
+.other-city-card .location-weather-img span{
+    text-align: center;
+    font-size: 1.3rem;
+    font-family: quantico,sans-serif;
 }
 
 .other-city-card .location-weather-img img{
-    width: 100px;
-    height: 80px;
+    width: 60px;
+    height: 50px;
 }
 
 @media screen and (orientation : portrait){
     .other-city-card{
         box-sizing: border-box;
-        width: 100rem;
+        width: 10rem;
         margin-left: 17px;
         display: flex;
         flex-direction: column;
@@ -84,7 +113,9 @@
 
     .other-city-card .location-del-icon{
         width: 100%;
-        background-color: red;
+        background-color: var(--blue);
+        color: black!important;
+        font-weight: 800!important;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
         padding: 0.8rem 0rem;
