--- a/src/components/TodayCard/TodayCard.css
+++ b/src/components/TodayCard/TodayCard.css
@@ -1,23 +1,137 @@
 .today-card{
     margin-top: 2rem;
     box-sizing: border-box;
-    padding: 1.7rem 2rem;
+    padding: 1rem 1.8rem;
     width: 90%;
-    height: max-content;
+    /* height: 40rem; */
     margin-bottom: 2.2rem;
     background-color: var(--gray);
-    height: 30%;
+    height: 35%;
     margin-left: 3%;
     border-radius: 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
+}
+
+.today-card .left-section-today {
+    display: flex;
+    flex-direction: row;
+    width: 45%;
+    padding: 0rem 2rem 0rem 0.5rem;
+    justify-content: space-between;
+}
+
+.today-card .left-section-today .weather-condition-displayer{ 
+    box-sizing: border-box;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 0rem 2rem 0rem 1rem;
+    height: 100%;
+}
+
+
+.today-card .right-section-today{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.today-card .right-section-today .today-other-condn {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 0.8rem;
+}
+
+.today-card .right-section-today .today-other-condn .property{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 0.3rem;
+    border-bottom: 1px solid rgb(68, 68, 68);
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+
+.today-card .right-section-today .city-name-today{
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.today-card .right-section-today .city-name-today{
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.today-card .right-section-today .today-other-condn{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.today-card .left-section-today .temp-displayer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.today-card .left-section-today .temp-displayer span:nth-child(1){
+    font-size: 3rem;
+    font-family: quantico,sans-serif;
 }
 
 @media screen and (orientation : portrait){
     .today-card{
         width: 100%;
-        padding: 1.2rem 1.2rem;
+        padding: 0.8rem 0.8rem;
         margin-left: 0%;
     }
+
+    .today-card .left-section-today{
+        width: 20%;
+        font-size: 1rem;
+    }
+
+    .today-card .left-section-today .weather-condition-displayer span:nth-child(1){
+        display: none;
+    }
+
+    .today-card .left-section-today .temp-displayer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .today-card .left-section-today .temp-displayer span:nth-child(1){
+        font-size: 1.5rem;
+        font-family: quantico,sans-serif;
+        margin-top: 2rem;
+        padding-left: 1.2rem;
+    }
+
+    .today-card .left-section-today .temp-displayer span:nth-child(2){
+        display: none;
+    }
+
+    .today-card .right-section-today .today-other-condn{
+        display: none;
+    }
+
+    .today-card .right-section-today .city-name-today{
+        font-size: 2rem;
+    }
+    
+    .today-card .right-section-today {
+        width: 90%;
+    }
+
+    .today-card .right-section-today .city-name-today{
+        font-size: 2rem;
+    }
+    
 }
