--- a/src/components/OtherCityCard/OtherCityCard.css
+++ b/src/components/OtherCityCard/OtherCityCard.css
@@ -2,15 +2,17 @@
     box-sizing: border-box;
     width: 100%;
     text-align:center;
-    min-height: 80px;
-    margin-bottom: 1.5rem;
+    /* min-height: 80px; */
     background-color: #1B1A1D;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     padding: 0rem 0.4rem 0rem 0rem;
+    border-bottom: 0.4px solid gray;
 }
+
+
 
 .other-city-card .location-name-condn{
     display: flex;
@@ -19,7 +21,6 @@
     align-items: center;
     width: 35%;
     padding-top: 0.5rem;
-    /* height: 100%; */
 }
 
 .other-city-card .location-name-condn span:nth-child(1){
@@ -68,11 +69,12 @@
     .other-city-card{
         box-sizing: border-box;
         width: 10rem;
-        margin-left: 17px;
+        margin-left: 1px;
+        margin-right: 10px;
         display: flex;
         flex-direction: column;
         padding: 0px 0px;
-        /* padding-bottom: 15px; */
+        border-bottom: 0px;
     }
 
     .other-city-card .location-name-condn{
