--- a/src/components/OtherCityCard/OtherCityCard.css
+++ b/src/components/OtherCityCard/OtherCityCard.css
@@ -65,6 +65,14 @@
     height: 50px;
 }
 
+
+.light-other-city-card{
+    background-color: #F7F7F7;
+    color: black;
+    font-weight: 500;
+}
+
+
 @media screen and (orientation : portrait){
     .other-city-card{
         box-sizing: border-box;
@@ -121,6 +129,10 @@
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
         padding: 0.8rem 0rem;
+    }
+
+    .light-right-secn .other-city-card .location-del-icon{
+        background-color: var(--orange);
     }
 
 
