--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -51,3 +51,11 @@ footer a i{
     font-weight: 500;
     font-size: 1.4rem;
 }
+
+.light-footer{
+    background-color: rgb(147, 96, 2)
+}
+
+.light-footer a{
+    background-color: white;
+}
