--- a/src/components/OneDayCard/OneDayCard.css
+++ b/src/components/OneDayCard/OneDayCard.css
@@ -11,6 +11,16 @@
     /* width: 500px; */
 }
 
+.light-weather-card{
+    background-color: rgb(250, 250, 250);
+    border: 1px solid orange;
+}
+
+.light-weather-card *{
+    color: black;
+    font-weight: 700;
+}
+
 
 .weather-card .weather-card-img img{
     width: 90px;
@@ -32,6 +42,10 @@
     border-bottom: 0.3px solid rgb(86, 84, 84);
 }
 
+.light-weather-card .weather-card-day{
+    border-bottom: 1px solid orange;
+}
+
 .weather-card .weather-card-temp{
     font-family: 'Quantico', sans-serif;
     font-size: 1.2rem;
@@ -49,6 +63,8 @@
     border-radius: 20px;
     width: 25rem;
 }
+
+
 
 .active-weather-card .active-card-day{
     background-color: rgb(173,202,222);
@@ -88,6 +104,26 @@
 .active-weather-card .active-card-bottom {
     padding: 0px 11px 12px 18px;
 }
+
+.light-active-weather-card{
+    background-color: rgb(250, 250, 250);
+    border: 1px solid orange;
+    color: var(--orange);
+}
+
+.light-active-weather-card .active-card-day{
+    background-color: rgb(240, 240, 240);
+}
+
+.light-active-weather-card .active-card-day{
+    border-bottom: 1px solid orange;
+}
+
+.light-active-weather-card .active-card-bottom .bottom-prop{
+    color: rgb(175, 124, 28);
+    font-weight: 400;
+}
+
 
 
 @media screen and (max-width:1360px) {
