--- a/src/screens/RightScreen/RightScreen.css
+++ b/src/screens/RightScreen/RightScreen.css
@@ -42,6 +42,12 @@
 }
 
 
+.light-right-secn .heading-other-city{
+    background-color: orange!important;
+    border-bottom: 0px;
+    color: black;
+}
+
 .heading-other-city i{
     margin-left: auto;
     display: flex;
@@ -129,6 +135,12 @@
     font-size: 1.4rem;
 }
 
+.light-right-secn .heading-latest-news{
+    background-color: orange!important;
+    border-bottom: 0px;
+    color: black;
+}
+
 .right-secn .latest-news-list{
     height: 80%;
     overflow-y: auto;
@@ -152,6 +164,7 @@
         overflow-x:auto ;
     }
 
+
     .right-secn .latest-news-list::-webkit-scrollbar{
         display: none;
     }
@@ -159,3 +172,23 @@
     
 }
 
+@media screen and (max-width:1200px){
+    .right-secn .heading-latest-news{
+        font-size: 1rem;
+    }
+
+    .heading-other-city{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:900px){
+
+    .heading-other-city{
+        font-size: 1rem;
+    }
+
+    .right-secn .heading-latest-news{
+        font-size: 0.8rem;
+    }
+}
