--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ main{
   box-sizing: border-box;
   padding: 1.1rem 1.1rem 1.2rem 1.1rem;
   width: 100%;
+  min-height: 89vh;
 }
 
 header{
@@ -57,6 +58,29 @@ a{
   text-decoration: none;
   color:white;
 }
+
+
+
+.alert-box {
+	padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;  
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.failure {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  /* display: none; */
+}
+
+
+
 
 
 @media screen and (orientation : portrait){
