--- a/src/components/WeatherNewsCard/WeatherNewsCard.css
+++ b/src/components/WeatherNewsCard/WeatherNewsCard.css
@@ -5,6 +5,9 @@
     background-color: #1B1A1D;
     padding: 1rem 0.8rem;
     border-bottom: 0.4px solid gray;
+    border-left: 1px solid var(--gray);
+    border-bottom: 0.4px solid gray;
+    border-right: 1px solid var(--gray);
 }
 
 .weather-news-card:last-child{
