--- a/src/components/HourCard/HourCard.css
+++ b/src/components/HourCard/HourCard.css
@@ -4,7 +4,7 @@
     margin-left: 14px;
     margin-right: 14px;
     justify-content: space-around;
-    background-color: rgb(27,26,29);
+    background-color: var(--gray);
     border-radius: 20px;
     width: 12.5rem;
 }
