--- a/src/components/OneDayCard/OneDayCard.css
+++ b/src/components/OneDayCard/OneDayCard.css
@@ -4,7 +4,7 @@
     margin-left: 14px;
     margin-right: 14px;
     justify-content: space-around;
-    background-color: rgb(27,26,29);
+    background-color: var(--gray);
     /* padding: 10px 2px; */
     border-radius: 20px;
     width: 12.2rem;
